--- a/pages/empleados/empleados.html
+++ b/pages/empleados/empleados.html
@@ -20,7 +20,7 @@
         <hr class="sidebar-divider my-0">
 
         <li class="nav-item active">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="../../index.html">
                 <i class="fas fa-fw fa-home active"></i>
                 <span>Inicio</span></a>
         </li>
@@ -42,8 +42,8 @@
             </a>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="pages/tareas/pendientes.html">Pendientes</a>
-                    <a class="collapse-item" href="pages/tareas/completadas.html">Completadas</a>
+                    <a class="collapse-item" href="../../pages/tareas/pendientes.html">Pendientes</a>
+                    <a class="collapse-item" href="../../pages/tareas/completadas.html">Completadas</a>
                 </div>
             </div>
         </li>
@@ -58,7 +58,7 @@
             <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                  data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="pages/empleados/empleados.html">Lista de empleados</a>
+                    <a class="collapse-item" href="../../pages/empleados/empleados.html">Lista de empleados</a>
                 </div>
             </div>
         </li>
@@ -81,7 +81,7 @@
         <div id="content">
             <!-- Topbar -->
             <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-                <h3>Inicio</h3>
+                <h3>Empleados</h3>
                 <ul class="navbar-nav ml-auto">
                     <!-- Nav Item - User Information -->
                     <li class="nav-item dropdown no-arrow">
@@ -96,7 +96,7 @@
                             <a class="dropdown-item" href="#">
                                 <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>Perfil</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                            <a class="dropdown-item" href="../../login.html" >
                                 <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>Cerrar Sesion</a>
                         </div>
                     </li>
@@ -106,6 +106,69 @@
             <!--Contenido-->
             <div class="container-fluid">
 
+                <!-- DataTales Example -->
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold text-primary">Listado de empleados</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                <thead>
+                                <tr>
+                                    <th>Empleado</th>
+                                    <th>Tareas</th>
+                                    <th>Horas extras</th>
+                                </tr>
+                                </thead>
+                                <tfoot>
+                                <tr>
+                                    <th>Empleado</th>
+                                    <th>Tareas</th>
+                                    <th>Horas extras</th>
+                                </tr>
+                                </tfoot>
+                                <tbody>
+                                <tr>
+                                    <td>Nombre Empleado</td>
+                                    <td>10</td>
+                                    <td>20</td>
+                                </tr>
+                                <tr>
+                                    <td>Nombre Empleado</td>
+                                    <td>10</td>
+                                    <td>20</td>
+                                </tr>
+                                <tr>
+                                    <td>Nombre Empleado</td>
+                                    <td>10</td>
+                                    <td>20</td>
+                                </tr>
+                                <tr>
+                                    <td>Nombre Empleado</td>
+                                    <td>10</td>
+                                    <td>20</td>
+                                </tr>
+                                <tr>
+                                    <td>Nombre Empleado</td>
+                                    <td>10</td>
+                                    <td>20</td>
+                                </tr>
+                                <tr>
+                                    <td>Nombre Empleado</td>
+                                    <td>10</td>
+                                    <td>20</td>
+                                </tr>
+                                <tr>
+                                    <td>Nombre Empleado</td>
+                                    <td>10</td>
+                                    <td>20</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
