--- a/pages/tareas/completadas.html
+++ b/pages/tareas/completadas.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Horas Extras - Tareas Completadas</title>    <link href="../../css/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <title>Horas Extras - Tareas Completadas</title>
+    <link href="../../css/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
     <link href="../../css/app.css" rel="stylesheet">
+    <link href="../../js/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 </head>
 <body id="page-top">
 <div id="wrapper">
@@ -20,7 +22,7 @@
         <hr class="sidebar-divider my-0">
 
         <li class="nav-item active">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="../../index.html">
                 <i class="fas fa-fw fa-home active"></i>
                 <span>Inicio</span></a>
         </li>
@@ -42,8 +44,8 @@
             </a>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="pages/tareas/pendientes.html">Pendientes</a>
-                    <a class="collapse-item" href="pages/tareas/completadas.html">Completadas</a>
+                    <a class="collapse-item" href="../../pages/tareas/pendientes.html">Pendientes</a>
+                    <a class="collapse-item" href="../../pages/tareas/completadas.html">Completadas</a>
                 </div>
             </div>
         </li>
@@ -58,7 +60,7 @@
             <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                  data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="pages/empleados/empleados.html">Lista de empleados</a>
+                    <a class="collapse-item" href="../../pages/empleados/empleados.html">Lista de empleados</a>
                 </div>
             </div>
         </li>
@@ -81,7 +83,7 @@
         <div id="content">
             <!-- Topbar -->
             <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-                <h3>Inicio</h3>
+                <h3>Tareas Completadas</h3>
                 <ul class="navbar-nav ml-auto">
                     <!-- Nav Item - User Information -->
                     <li class="nav-item dropdown no-arrow">
@@ -96,7 +98,7 @@
                             <a class="dropdown-item" href="#">
                                 <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>Perfil</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                            <a class="dropdown-item" href="../../login.html">
                                 <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>Cerrar Sesion</a>
                         </div>
                     </li>
@@ -105,7 +107,84 @@
 
             <!--Contenido-->
             <div class="container-fluid">
-
+                <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+                            class="fas fa-file-pdf fa-sm text-white-50"></i> Reporte</a>
+                </div>
+                <!-- DataTales Example -->
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold text-primary">Listado de tareas completadas</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                <thead>
+                                <tr>
+                                    <th>Actividad</th>
+                                    <th>Empleado</th>
+                                    <th>Alimentos</th>
+                                    <th>Inicio</th>
+                                    <th>Fin</th>
+                                </tr>
+                                </thead>
+                                <tfoot>
+                                <tr>
+                                    <th>Actividad</th>
+                                    <th>Empleado</th>
+                                    <th>Alimentos</th>
+                                    <th>Inicio</th>
+                                    <th>Fin</th>
+                                </tr>
+                                </tfoot>
+                                <tbody>
+                                <tr>
+                                    <td>Nombre Tarea</td>
+                                    <td>Nombre Empleado</td>
+                                    <td>Si</td>
+                                    <td>2020/06/12</td>
+                                    <td>2020/06/12</td>
+                                </tr>
+                                <tr>
+                                    <td>Nombre Tarea</td>
+                                    <td>Nombre Empleado</td>
+                                    <td>Si</td>
+                                    <td>2020/06/12</td>
+                                    <td>2020/06/12</td>
+                                </tr>
+                                <tr>
+                                    <td>Nombre Tarea</td>
+                                    <td>Nombre Empleado</td>
+                                    <td>Si</td>
+                                    <td>2020/06/12</td>
+                                    <td>2020/06/12</td>
+                                </tr>
+                                <tr>
+                                    <td>Nombre Tarea</td>
+                                    <td>Nombre Empleado</td>
+                                    <td>Si</td>
+                                    <td>2020/06/12</td>
+                                    <td>2020/06/12</td>
+                                </tr>
+                                <tr>
+                                    <td>Nombre Tarea</td>
+                                    <td>Nombre Empleado</td>
+                                    <td>Si</td>
+                                    <td>2020/06/12</td>
+                                    <td>2020/06/12</td>
+                                </tr>
+                                <tr>
+                                    <td>Nombre Tarea</td>
+                                    <td>Nombre Empleado</td>
+                                    <td>Si</td>
+                                    <td>2020/06/12</td>
+                                    <td>2020/06/12</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -124,5 +203,11 @@
 <script src="../../js/jquery-easing/jquery.easing.min.js"></script>
 <script src="../../js/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="../../js/app.js"></script>
+<!-- Page level plugins -->
+<script src="../../js/datatables/jquery.dataTables.min.js"></script>
+<script src="../../js/datatables/dataTables.bootstrap4.min.js"></script>
+
+<!-- Page level custom scripts -->
+<script src="../../scripts/pendientes.js"></script>
 </body>
 </html>
