--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
                                     </a>
                                 </form>
                                 <div class="text-center">
-                                    <a class="small" href="forgot-password.html">¿Olvidáste tu contraseña?</a>
+                                    <a class="small" href="#">¿Olvidáste tu contraseña?</a>
                                 </div>
                             </div>
                         </div>
