--- a/pages/empleados/empleados.html
+++ b/pages/empleados/empleados.html
@@ -187,5 +187,10 @@
 <script src="../../js/jquery-easing/jquery.easing.min.js"></script>
 <script src="../../js/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="../../js/app.js"></script>
+<script src="../../js/datatables/jquery.dataTables.min.js"></script>
+<script src="../../js/datatables/dataTables.bootstrap4.min.js"></script>
+
+<!-- Page level custom scripts -->
+<script src="../../scripts/pendientes.js"></script>
 </body>
 </html>
