--- a/pages/empleados/empleados.html
+++ b/pages/empleados/empleados.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
     <link href="../../css/app.css" rel="stylesheet">
+    <link href="../../js/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 </head>
 <body id="page-top">
 <div id="wrapper">
@@ -187,6 +188,7 @@
 <script src="../../js/jquery-easing/jquery.easing.min.js"></script>
 <script src="../../js/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="../../js/app.js"></script>
+<!-- Page level plugins -->
 <script src="../../js/datatables/jquery.dataTables.min.js"></script>
 <script src="../../js/datatables/dataTables.bootstrap4.min.js"></script>
 
