--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             </a>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="pages/tareas/pendientes.html">Pendientes</a>
-                    <a class="collapse-item" href="pages/tareas/completadas.html">Completadas</a>
+                    <a class="collapse-item" href="../../pages/tareas/pendientes.html">Por Autorizar</a>
+                    <a class="collapse-item" href="../../pages/tareas/aprobadas.html">Autorizadas</a>
                 </div>
             </div>
         </li>
@@ -64,6 +64,20 @@
             </div>
         </li>
 
+        <!-- Nav Item - Utilities Collapse Menu -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities2"
+               aria-expanded="true" aria-controls="collapseUtilities">
+                <i class="fas fa-fw fa-user-friends text-light"></i>
+                <span>Usuarios</span>
+            </a>
+            <div id="collapseUtilities2" class="collapse" aria-labelledby="headingUtilities"
+                 data-parent="#accordionSidebar">
+                <div class="bg-white py-2 collapse-inner rounded">
+                    <a class="collapse-item" href="../../pages/users/usuarios.html">Lista de usuarios</a>
+                </div>
+            </div>
+        </li>
 
         <!-- Divider -->
         <hr class="sidebar-divider d-none d-md-block">
