--- a/pages/tareas/aprobadas.html
+++ b/pages/tareas/aprobadas.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Horas Extras - Empleados</title>    <link href="../../css/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <title>Horas Extras - Tareas autorizadas</title>
+    <link href="../../css/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
     <link href="../../css/app.css" rel="stylesheet">
@@ -96,7 +97,7 @@
         <div id="content">
             <!-- Topbar -->
             <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-                <h3>Empleados</h3>
+                <h3>Tareas autorizadas</h3>
                 <ul class="navbar-nav ml-auto">
                     <!-- Nav Item - User Information -->
                     <li class="nav-item dropdown no-arrow">
@@ -111,7 +112,7 @@
                             <a class="dropdown-item" href="#">
                                 <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>Perfil</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="../../login.html" >
+                            <a class="dropdown-item" href="../../login.html">
                                 <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>Cerrar Sesion</a>
                         </div>
                     </li>
@@ -121,61 +122,72 @@
             <!--Contenido-->
             <div class="container-fluid">
                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                    <h6 class="mb-0 font-weight-bold text-primary">Listado de empleados</h6>
-                    <a href="" data-toggle="modal" data-target="#modalVistaPrevia" class="btn btn-danger btn-icon-split"><span class="icon text-white-50">
-                      <i class="fas fa-plus"></i>
+                    <h6 class="mb-0 font-weight-bold text-primary"></h6>
+                    <a href="usuarios.html" class="btn btn-danger btn-icon-split"><span class="icon text-white-50">
+                      <i class="fas fa-file-pdf"></i>
                     </span>
-                        <span class="text">Nuevo Empleado</span>
+                        <span class="text">Reporte</span>
                     </a>
                 </div>
                 <!-- DataTales Example -->
                 <div class="card shadow mb-4">
-
+                    <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold text-primary">Listado de tareas aprobadas</h6>
+                    </div>
                     <div class="card-body">
                         <div class="table-responsive">
                             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                 <thead>
                                 <tr>
+                                    <th>Actividad</th>
                                     <th>Empleado</th>
-                                    <th>Tareas</th>
-                                    <th>Horas extras</th>
+                                    <th>Alimentos</th>
+                                    <th>Inicio</th>
+                                    <th>Fin</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 <tr>
+                                    <td>Nombre Tarea</td>
                                     <td>Nombre Empleado</td>
-                                    <td>10</td>
-                                    <td>20</td>
+                                    <td>Si</td>
+                                    <td>2020/06/12</td>
+                                    <td>2020/06/12</td>
                                 </tr>
                                 <tr>
+                                    <td>Nombre Tarea</td>
                                     <td>Nombre Empleado</td>
-                                    <td>10</td>
-                                    <td>20</td>
+                                    <td>Si</td>
+                                    <td>2020/06/12</td>
+                                    <td>2020/06/12</td>
                                 </tr>
                                 <tr>
+                                    <td>Nombre Tarea</td>
                                     <td>Nombre Empleado</td>
-                                    <td>10</td>
-                                    <td>20</td>
+                                    <td>Si</td>
+                                    <td>2020/06/12</td>
+                                    <td>2020/06/12</td>
                                 </tr>
                                 <tr>
+                                    <td>Nombre Tarea</td>
                                     <td>Nombre Empleado</td>
-                                    <td>10</td>
-                                    <td>20</td>
+                                    <td>Si</td>
+                                    <td>2020/06/12</td>
+                                    <td>2020/06/12</td>
                                 </tr>
                                 <tr>
+                                    <td>Nombre Tarea</td>
                                     <td>Nombre Empleado</td>
-                                    <td>10</td>
-                                    <td>20</td>
+                                    <td>Si</td>
+                                    <td>2020/06/12</td>
+                                    <td>2020/06/12</td>
                                 </tr>
                                 <tr>
+                                    <td>Nombre Tarea</td>
                                     <td>Nombre Empleado</td>
-                                    <td>10</td>
-                                    <td>20</td>
-                                </tr>
-                                <tr>
-                                    <td>Nombre Empleado</td>
-                                    <td>10</td>
-                                    <td>20</td>
+                                    <td>Si</td>
+                                    <td>2020/06/12</td>
+                                    <td>2020/06/12</td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -184,42 +196,7 @@
                 </div>
             </div>
         </div>
-        <div class="modal fade bs-example-modal-lg" id="modalVistaPrevia" tabindex="-1" role="dialog"
-             aria-labelledby="lbModalVistaPrevia" aria-hidden="true">
-            <div class="modal-dialog modal-lg modal-dialog-centered"  role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="lbModalVistaPrevia">Nuevo Empleado</h5>
-                    </div>
-                    <div class="modal-body" id="bodyVistaPrevia">
-                        <div class="p-5">
-                            <form class="user">
-                                <div class="form-group">
-                                    <input type="text" class="form-control form-control-user" id="username"
-                                           placeholder="Nombre(s)">
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" class="form-control form-control-user" id="exampleInputEmail"
-                                           placeholder="Apellido(s)">
-                                </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-6">
-                                        <label for="empleados">Puesto</label>
-                                        <select name="empleados" class="form-control form-control-user" id="empleados">
-                                        </select>
-                                    </div>
-                                </div>
 
-
-                                <a href="" class="btn btn-primary btn-user btn-block">Guardar</a>
-                                <a href="" data-dismiss="modal" class="btn btn-danger btn-user btn-block">Cancelar</a>
-                            </form>
-                            <hr>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <!--Footer-->
         <footer class="sticky-footer bg-white">
             <div class="container my-auto">
