--- a/pages/users/usuarios.html
+++ b/pages/users/usuarios.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Horas Extras - Tareas Completadas</title>
+    <title>Horas Extras - Usuarios</title>
     <link href="../../css/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
@@ -10,6 +10,9 @@
     <link href="../../js/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 </head>
 <body id="page-top">
+<style>
+
+</style>
 <div id="wrapper">
     <!--Sidebar-->
     <ul class="navbar-nav bg-primary sidebar sidebar-dark accordion" id="accordionSidebar">
@@ -44,8 +47,8 @@
             </a>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="../../pages/tareas/pendientes.html">Pendientes</a>
-                    <a class="collapse-item" href="../../pages/tareas/completadas.html">Completadas</a>
+                    <a class="collapse-item" href="../../pages/tareas/pendientes.html">Por Autorizar</a>
+                    <a class="collapse-item" href="../../pages/tareas/aprobadas.html">Autorizadas</a>
                 </div>
             </div>
         </li>
@@ -65,6 +68,20 @@
             </div>
         </li>
 
+        <!-- Nav Item - Utilities Collapse Menu -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities2"
+               aria-expanded="true" aria-controls="collapseUtilities">
+                <i class="fas fa-fw fa-user-friends text-light"></i>
+                <span>Usuarios</span>
+            </a>
+            <div id="collapseUtilities2" class="collapse" aria-labelledby="headingUtilities"
+                 data-parent="#accordionSidebar">
+                <div class="bg-white py-2 collapse-inner rounded">
+                    <a class="collapse-item" href="../../pages/users/usuarios.html">Lista de usuarios</a>
+                </div>
+            </div>
+        </li>
 
         <!-- Divider -->
         <hr class="sidebar-divider d-none d-md-block">
@@ -83,7 +100,7 @@
         <div id="content">
             <!-- Topbar -->
             <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-                <h3>Tareas Completadas</h3>
+                <h3>Usuarios</h3>
                 <ul class="navbar-nav ml-auto">
                     <!-- Nav Item - User Information -->
                     <li class="nav-item dropdown no-arrow">
@@ -98,7 +115,7 @@
                             <a class="dropdown-item" href="#">
                                 <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>Perfil</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="../../login.html">
+                            <a class="dropdown-item" href="../../login.html" >
                                 <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>Cerrar Sesion</a>
                         </div>
                     </li>
@@ -107,78 +124,50 @@
 
             <!--Contenido-->
             <div class="container-fluid">
-                <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                            class="fas fa-file-pdf fa-sm text-white-50"></i> Reporte</a>
-                </div>
+
                 <!-- DataTales Example -->
+                <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                    <h6 class="mb-0 font-weight-bold text-primary"></h6>
+                    <a href="" data-toggle="modal" data-target="#modalVistaPrevia" class="btn btn-danger btn-icon-split"><span class="icon text-white-50">
+                      <i class="fas fa-plus"></i>
+                    </span>
+                        <span class="text">Nuevo Usuario</span>
+                    </a>
+                </div>
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
-                        <h6 class="m-0 font-weight-bold text-primary">Listado de tareas completadas</h6>
+                        <h6 class="m-0 font-weight-bold text-primary">Listado de usuarios</h6>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
                             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                 <thead>
                                 <tr>
-                                    <th>Actividad</th>
-                                    <th>Empleado</th>
-                                    <th>Alimentos</th>
-                                    <th>Inicio</th>
-                                    <th>Fin</th>
+                                    <th>Usuario</th>
+                                    <th>Rol</th>
+                                    <th>Estado</th>
                                 </tr>
                                 </thead>
-                                <tfoot>
-                                <tr>
-                                    <th>Actividad</th>
-                                    <th>Empleado</th>
-                                    <th>Alimentos</th>
-                                    <th>Inicio</th>
-                                    <th>Fin</th>
-                                </tr>
-                                </tfoot>
                                 <tbody>
                                 <tr>
-                                    <td>Nombre Tarea</td>
-                                    <td>Nombre Empleado</td>
-                                    <td>Si</td>
-                                    <td>2020/06/12</td>
-                                    <td>2020/06/12</td>
+                                    <td>Username</td>
+                                    <td>Administrador</td>
+                                    <td><span class="badge badge-success">Activo</span></td>
                                 </tr>
                                 <tr>
-                                    <td>Nombre Tarea</td>
-                                    <td>Nombre Empleado</td>
-                                    <td>Si</td>
-                                    <td>2020/06/12</td>
-                                    <td>2020/06/12</td>
+                                    <td>Username</td>
+                                    <td>Rol1</td>
+                                    <td><span class="badge badge-success">Activo</span></td>
                                 </tr>
                                 <tr>
-                                    <td>Nombre Tarea</td>
-                                    <td>Nombre Empleado</td>
-                                    <td>Si</td>
-                                    <td>2020/06/12</td>
-                                    <td>2020/06/12</td>
+                                    <td>Username</td>
+                                    <td>Rol2</td>
+                                    <td><span class="badge badge-success">Activo</span></td>
                                 </tr>
                                 <tr>
-                                    <td>Nombre Tarea</td>
-                                    <td>Nombre Empleado</td>
-                                    <td>Si</td>
-                                    <td>2020/06/12</td>
-                                    <td>2020/06/12</td>
-                                </tr>
-                                <tr>
-                                    <td>Nombre Tarea</td>
-                                    <td>Nombre Empleado</td>
-                                    <td>Si</td>
-                                    <td>2020/06/12</td>
-                                    <td>2020/06/12</td>
-                                </tr>
-                                <tr>
-                                    <td>Nombre Tarea</td>
-                                    <td>Nombre Empleado</td>
-                                    <td>Si</td>
-                                    <td>2020/06/12</td>
-                                    <td>2020/06/12</td>
+                                    <td>Username</td>
+                                    <td>Superintendente</td>
+                                    <td><span class="badge badge-success">Activo</span></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -187,7 +176,43 @@
                 </div>
             </div>
         </div>
-
+        <div class="modal fade bs-example-modal-lg" id="modalVistaPrevia" tabindex="-1" role="dialog"
+             aria-labelledby="lbModalVistaPrevia" aria-hidden="true">
+            <div class="modal-dialog modal-lg modal-dialog-centered"  role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="lbModalVistaPrevia">Nuevo Usuario</h5>
+                    </div>
+                    <div class="modal-body" id="bodyVistaPrevia">
+                        <div class="p-5">
+                            <form class="user">
+                                <div class="form-group row">
+                                    <div class="col-sm-6 mb-3 mb-sm-0">
+                                        <input type="text" class="form-control form-control-user" id="exampleFirstName"
+                                               placeholder="Nombre de usuario">
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <input type="email" class="form-control form-control-user" id="exampleLastName"
+                                               placeholder="Correo electrónico">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" class="form-control form-control-user" id="username"
+                                           placeholder="Nombre(s)">
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" class="form-control form-control-user" id="exampleInputEmail"
+                                           placeholder="Apellido(s)">
+                                </div>
+                                <a href="" class="btn btn-primary btn-user btn-block">Guardar</a>
+                                <a href="" data-dismiss="modal" class="btn btn-danger btn-user btn-block">Cancelar</a>
+                            </form>
+                            <hr>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!--Footer-->
         <footer class="sticky-footer bg-white">
             <div class="container my-auto">
